# bird-database-rs

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: bird_endpoints.rs  database.rs  error.rs  lib.rs
entity/src/: bird.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
src/: main.rs
