[package]
name = "bird-database-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "api", "entity", "migration"]

[dependencies]
api = { path = "api" }
config = "0.13.3"
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
