[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait = "0.1.73"
config = "0.11"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc","rocket_db_pools"] }
sea-orm = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }
sea-orm-rocket = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
uuid = "1.4.1"
