[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "0.12.3", features = [ "sqlx-postgres", "runtime-tokio-rustls" ] }